# django-solomon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  justfile  manage.py  mkdocs.yml  pyproject.toml  tox.ini
docs/: CNAME
src/solomon/: admin.py  apps.py  backends.py  conf.py  decorators.py  forms.py  models.py  urls.py  utils.py  views.py
src/solomon/migrations/: 0001_initial.py
tests/: conftest.py  settings.py  test_admin.py  test_backends.py  test_decorators.py  test_forms.py  test_login.py  test_models.py  test_utils.py  test_views.py  urls.py  xtest_signup.py
