[project]
name = "django-solomon"
dynamic = ["version"]
description = "Add your description here"
authors = [{ name = "Oliver Andrich", email = "oliver@andrich.me" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["django-appconf>=1.0.6", "django>=4.2"]
license = { file = "LICENSE" }
keywords = ["django", "tailwind", "css"]

[project.urls]
Home = "https://django-solomon.andrich.me/"
Documentation = "https://django-solomon.andrich.me/"
Repository = "https://github.com/oliverandrich/django-solomon"

[tool.uv]
dev-dependencies = [
    "django-types>=0.19.1",
    "time-machine>=2.15.0",
    "faker>=30.0.0",
    "django-rich>=1.11.0",
    "coverage[toml]>=7.6.1",
    "parameterized>=0.9.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solomon"]

[tool.hatch.version]
source = "vcs"

# Pyright
[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
ignore = ["./tests/**/*"]

# Ruff
[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.format]
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "ARG", # flake8-unused-arguments
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "E",   # pycodestyle
    "F",   # pyflakes
    "FBT", # flake8-boolean-trap
    "N",   # pep8-naming
    "Q",   # flake8-quotes
    "TID", # flake8-tidy-imports
    "W",   # pycodestyle
    "YTT", # flake8-2020
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore complexity
    "C901",
]
unfixable = [
    # Don't touch unused imports
    "F401",
    # Don't touch unused variables
    "F841",
]

[tool.ruff.lint.isort]
known-first-party = ["solomon"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["PLR2004", "S101", "TID252", "ARG001"]
"tests/snapshots/*" = ["ALL"]
"**/migrations/*" = ["ALL"]

# Coverage
[tool.coverage.run]
source = ["solomon"]
branch = true

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
